Fix footer alignment

--- a/content/themes/light/sass/layout/_site-footer.scss
+++ b/content/themes/light/sass/layout/_site-footer.scss
@@ -28,7 +28,7 @@ body {
 
       @media (max-width: $container-ipad) {
         @include stack();
-        text-align: left;
+        text-align: left !important;
       }
     }
   }
